<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerline"
        android:layout_centerInParent="true"
        >

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerline"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="42sp"
            android:textColor="@color/black"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logintoconti"
            android:textSize="23sp"
            android:textColor="@color/black">

        </TextView>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centerline"
        android:layout_marginBottom="10dp"
        android:id="@+id/email"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginemail"
            android:hint="@string/enteremail"
            android:inputType="textEmailAddress">

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/centerline"
        android:layout_marginTop="10dp"
        android:id="@+id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginpassword"
            android:hint="@string/enterpassword"
            >

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/button_design"
        android:layout_marginTop="30dp"
        android:layout_below="@id/password"
        android:id="@+id/login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:text="@string/nlogin"
            android:textColor="@color/white"

            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotpass"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/gotoforgotpassword"
        android:textColor="@color/black"
        android:layout_below="@id/login"
        android:layout_marginTop="10dp"
        android:textAlignment="center">

    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/button_design"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/gotosignup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@string/newsignup"

            android:layout_centerInParent="true"
            android:textColor="@color/white"
            >

        </TextView>
    </RelativeLayout>


</RelativeLayout>